Web/css/_interface.less
.container {
    display: flex;
    flex-direction: column;
    height: 100%;
    background-color: @color-chat-background;
}

.fixed-bar {
    flex: 0 0 auto;
    display: flex;
    color: @color-chat-text;
    background-color: @color-background;
    padding: 6px;

    form {
        display: flex;
        flex: 1 1 auto;

        label {
            display: none;
        }
    }

    .btn,
    input,
    textarea {
        display: block;
        height: 16px;
        padding: 6px;
        font-size: 10pt;
        outline: none;
        transition: all 0.1s ease-in-out;
        margin: 0px;
        margin-right: 6px;

        &:last-child {
            margin-right: 0;
        }
    }

    .btn {
        flex: 0 0 auto;
        box-sizing: content-box;
        text-align: center;
        background-color: @color-button;
        color: @color-button-text;
        font-weight: bold;
        text-decoration: none;
        cursor: pointer;

        &:hover {
            background-color: @color-button-hover;
        }
    }

    input,
    textarea {
        flex: 1 1 auto;
        color: @color-input-text;
        background-color: @color-input;
        border: none;

        &:focus {
            color: @color-input-text;
            background-color: @color-input;
        }
    }
}

#header {
    padding-bottom: 0px;

    h1 {
        flex: 20 0 auto;
        font-size: 17pt;
    }
}

#room-area {
    flex: 20 20 auto;

    display: flex;
    flex-direction: row;
    height: 0%;
}

#history {
    flex: 20 20 auto;
    overflow-y: scroll;
}

#footer {
    textarea {
        resize: none;
        font-family: inherit;
        overflow: hidden;
    }
}

@media all and (max-width: 599px) {
    div.container > #header {
        h1 {
            display: none;
        }
    }
}

@-moz-document url-prefix() {
    .flex-container {
        width: 100%;
        -moz-box-sizing: border-box;
    }
}

